2010-07-19  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* racer_bugreport/README.txt: Add new racer bugreport.
	* racer_bugreport/racer-bad-cmd-seq.racer: Likewise.

2010-07-09  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* NEWS: Add list of user-visible changes.

	* configure.ac (AC_INIT): Bump version to 1.7.1.

2010-07-07  Peter Schueller  <ps@kr.tuwien.ac.at>

	* src/AtomSeparator.cpp: No longer using setAlwaysFO because this
	is no longer necessary (printing is no longer per default in HO mode).
	* src/HexDLRewriter.cpp: Likewise.

2010-06-23  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* README: Update.
	* MAINTAINER-README: Likewise.

2010-06-22  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	Release version 1.7.0.

2010-06-21  Peter Schueller  <ps@kr.tuwien.ac.at>

	* testsuite/Makefile.am: Changing order of libraries, such that
	libtool will correctly order the -rpath directives.

2010-06-19  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* NEWS: Update.

	* src/RacerInterface.cpp: Renamed --cq parameter to --dfcq.

	* src/HexDLConverter.cpp: Use @todo instead of TODO.
	Add documentation.

	* src/DFConverter.cpp (DFConverter::convert): Turn off default
	rewriter by default (use --dftrans=N to turn it on) (ticket #5).

2010-06-18  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/AtomSeparator.cpp: Use Term::getNameSpaces singleton
	instance method.

2010-06-17  Peter Schueller  <ps@kr.tuwien.ac.at>

	* testsuite/run-tests.sh: Fixing make check and distcheck.
	* testsuite/Makefile.am: Likewise.

2010-06-15  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* configure.ac (BOOST_REQUIRE): Require boost >= 1.41.

2010-06-14  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* m4/boost.m4: Updating to version currently used in dlvhex trunk.

	* configure.ac (AC_INIT): Bump version to 1.7.0.

	* Makefile.am (AUTOMAKE_OPTIONS): Add check-news.

	* examples/Makefile.am: Add shop-inconsistent-small test case.